--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,84 @@
 plugins {
-	id 'fabric-loom' version '0.2.3-SNAPSHOT'
+	id 'fabric-loom' version '0.4-SNAPSHOT'
+	id 'maven-publish'
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "presstowalk"
-version = "1.0.2"
+version = project.mod_version + "-" + project.minecraft_version
 
 minecraft {
 }
 
 repositories {
-	maven { url = "https://maven.fabricmc.net/" }
-	maven { url = "https://minecraft.curseforge.com/api/maven" }
-	maven { url = 'http://maven.sargunv.s3-website-us-west-2.amazonaws.com/' }
+
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:1.14.2"
-	mappings "net.fabricmc:yarn:1.14.2+build.2"
-	modCompile "net.fabricmc:fabric-loader:0.4.8+build.154"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// cloth & autoconfig
-	modCompile "cloth-config:ClothConfig:0.2.1.14"
-	modCompile "me.sargunvohra.mcmods:auto-config:1.1.2+mc1.14.1"
-
-	// jij
-	include "cloth-config:ClothConfig:0.2.1.14"
-	include "me.sargunvohra.mcmods:auto-config:1.0.0+mc1.14"
+	modCompile "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 
 	// mod menu compat
-	modCompile "io.github.prospector.modmenu:ModMenu:1.5.4-85"
+	modCompile "io.github.prospector:modmenu:${project.mod_menu_version}"
+}
 
-	//Fabric api
-	modCompile "net.fabricmc.fabric-api:fabric-api:0.3.0-pre+build.165"
+processResources {
+	inputs.property "version", project.version
+
+	from(sourceSets.main.resources.srcDirs) {
+		include "fabric.mod.json"
+		expand "version": project.version
+	}
+
+	from(sourceSets.main.resources.srcDirs) {
+		exclude "fabric.mod.json"
+	}
+}
+
+// ensure that the encoding is set to UTF-8, no matter what the system default is
+// this fixes some edge cases with special characters not displaying correctly
+// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+tasks.withType(JavaCompile) {
+	options.encoding = "UTF-8"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = 'sources'
+	classifier = "sources"
 	from sourceSets.main.allSource
+}
+
+jar {
+	from "LICENSE"
+}
+
+// configure the maven publication
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			// add all the jars that should be included when publishing to maven
+			artifact(remapJar) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+		}
+	}
+
+	// select the repositories you want to publish to
+	repositories {
+		// uncomment to publish to the local maven
+		// mavenLocal()
+	}
 }
